W-17466198: Make Transformers not be Processors anymore (#14053)